Fix iOS attempt by setting background-attachment to scroll on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,8 @@ body {
 /* ----------------- Hero images */
 
 
-.hero-image {
-    background: url(../images/hero/home-hero.jpg) no-repeat center center;
+.hero-background {
+    background: url(../images/hero/home-hero.jpg) no-repeat center center fixed;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -82,7 +82,7 @@ body {
     padding: 0;
 }
 
-.markenhaven-image {
+.markenhaven-background {
     background: url(../images/hero/contact-hero.jpg) no-repeat center center fixed;
     background-size: cover;
     display: -webkit-box;
@@ -865,6 +865,13 @@ body {
         letter-spacing: 0.1rem;
         font-weight: 400;
         padding-left: 5px;
+    }
+    .hero-background,
+    .markenhaven-background,
+    .routes-background,
+    .canoes-background,
+    .paddle-background {
+        background-attachment: scroll;
     }
 }
 
